Fixed scrolling on start button push in Reaction Time game

--- a/game.html
+++ b/game.html
@@ -95,7 +95,7 @@
             <div class="card-body">
               <h5 class="card-title heading-center" id="remove_start">Push the Start button
               </h5>
-              <h5 class="card-title heading-center remove_start" id="ready_to_brake">Get ready to hit the brakes!</h5>
+              <h5 class="card-title heading-center remove_start" id="ready_to_brake">Get ready to brake!</h5>
               <br>
               <div class="container text-center">
               <button  
