Added instructions page as help for the test yourself page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:url"           content="https://pauld0051.github.io/physcis-code/index.html" />
 <meta property="og:type"          content="website" />
 <meta property="og:title"         content="Physics Code" />
-<meta property="og:description"   content="A free web resource for Physics students" />
+<meta property="og:description"   content="A free web resource for Physics students." />
 <meta property="og:image"         content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
 </head>
 
@@ -45,8 +45,12 @@
           <li class="nav-item active">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link nav-text" href="help.html">Help</a>
+          <li class="nav-item nav-text dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</a>
+            <div class="dropdown-menu dropdown--background" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item nav-text" href="help.html">How to</a>  
+          <a class="dropdown-item nav-text" href="test_yourself.html">Test yourself</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
@@ -65,7 +69,7 @@
       <div class="container div1">
       <h1>Dilemma Zone Calculator</h1>
       <p class="head-text">Add your variables to the calculator - you will need to supply all the variables before being able to
-        calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html"> help</a> page.</p>
+        calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html" target="_blank"> help</a> page.</p>
       <p class="head-text">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
         the size of the dilemma zone.</p>
       <p class="head-text my-0">The other possibility is that an option zone exists, this will be displayed as a distance from
