--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,8 @@
     </nav>
   </header>
   <div class="container">
-<h1>Privacy Policy for https://pauld0051.github.io/physcis-code/</h1>
+<h1>Privacy Policy</h1>
+<p>https://pauld0051.github.io/physcis-code/</p>
 
 <p>At Physics Code, accessible from https://pauld0051.github.io/physcis-code/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Physics Code and how we use it.</p>
 
