Fixed navbar links and removed non-essential script loaders

--- a/instructions.html
+++ b/instructions.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!--Fontawesome CDN-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
-  <!--Hover.css CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
   <!--Favicon-->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!--Link to custom style sheet-->
@@ -37,17 +35,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item nav-text dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="help.html">Help</a>
-            <div class="dropdown-menu dropdown--background" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item nav-text" href="test_yourself.html">Test yourself</a>
-            </div>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
@@ -73,9 +71,9 @@
   <section class="container">
     <div class="row">
       <div class="col-12 div2">
-        <h2>Velocity and signal phases</h2>
+        <h2>Open the map</h2>
         <p class="card-text">
-          The best methods to determine initial velocities and traffic light phases.
+          The map locations and coordinates have been given already, all you need to do is click on the map to open it in a new window. 
         </p>
       </div>
     </div>
@@ -91,8 +89,8 @@
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-help-map-large-1">
           <div class="card-body">
-            <p>Firstly, click on the map and it will open in a new page. Zoom in until you can see the intersection clearly. Make sure you're in satellite mode
-            and that you have turned off labels by clicking the menu in the top left and then click "Labels off".</p>
+            <p>Firstly, click on the map in the question and this will open in a new page. Make sure you're in satellite mode
+            and that you have turned off labels by clicking the menu in the top left and then click "Labels off". Now zoom in until you can see the intersection clearly. </p>
             <img src="assets/images/help-images/help-image-2.png" alt="Map help image" class="img-fluid help-images">
             <img src="assets/images/help-images/help-image-1.png" alt="Map help image" class="img-fluid help-images">
             
@@ -103,9 +101,9 @@
 
     <div class="row">
       <div class="col-12 div2">
-        <h2>Velocity and signal phases</h2>
+        <h2>Click on a starting point</h2>
         <p class="card-text">
-          The best methods to determine initial velocities and traffic light phases.
+          Make sure you're using the satellite view and that you've zoomed in so you can clearly see the stop line of one of the roads you're measuring from.  
         </p>
       </div>
     </div>
@@ -130,9 +128,9 @@
 
 <div class="row">
       <div class="col-12 div2">
-        <h2>Velocity and signal phases</h2>
+        <h2>Select "Measure distance"</h2>
         <p class="card-text">
-          The best methods to determine initial velocities and traffic light phases.
+          Right click on your pin to begin measuring distances.
         </p>
       </div>
     </div>
@@ -157,9 +155,9 @@
 
 <div class="row">
       <div class="col-12 div2">
-        <h2>Velocity and signal phases</h2>
+        <h2>Measurement</h2>
         <p class="card-text">
-          The best methods to determine initial velocities and traffic light phases.
+          Click perpendicular to the opposite stop line keeping your measurement as straight as possible. 
         </p>
       </div>
     </div>
@@ -257,11 +255,9 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="assets/scripts/calculator.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
-  <script src="assets/scripts/dependencies.js"></script>
-
+ 
 </body>
 
 </html>
