--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link nav-text" href="contact.html">Contact <span class="sr-only">(current)</span></a>
           </li>
@@ -182,7 +185,7 @@
   <script src="assets/scripts/sendemail.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
-  <script src="assets/scripts/dependencies.js"></script>
+
 
 </body>
 
