--- a/help.html
+++ b/help.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
           </li>
@@ -336,10 +339,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="assets/scripts/calculator.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
-  <script src="assets/scripts/dependencies.js"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
