--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
           <li class="nav-item active">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item nav-text dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</a>
-            <div class="dropdown-menu dropdown--background" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item nav-text" href="help.html">How to</a>  
-          <a class="dropdown-item nav-text" href="test_yourself.html">Test yourself</a>
-            </div>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
@@ -69,7 +68,7 @@
       <div class="container div1">
       <h1>Dilemma Zone Calculator</h1>
       <p class="head-text">Add your variables to the calculator - you will need to supply all the variables before being able to
-        calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html" target="_blank"> help</a> page.</p>
+        calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> info button to the help page at any time.</p>
       <p class="head-text">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
         the size of the dilemma zone.</p>
       <p class="head-text my-0">The other possibility is that an option zone exists, this will be displayed as a distance from
@@ -84,7 +83,7 @@
         <div class="col-12 div2">
           <h2>Maximum Travelling Distance</h2>
           <p class="card-text">
-            Input the variables for velocity, yellow light phase and interphase.
+            Input the variables for velocity, yellow light phase and interphase. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
           </p>
         </div>
       </div>
@@ -200,7 +199,7 @@
         <div class="col-12 div2">
           <h2>Reaction Distance, coeffecient of friction and intersection distance</h2>
           <p class="card-text">
-            Input the reaction time for the driver (s), the coefficient of friction (0 - 1) and the size of the intersection from stop line to opposite stop line.
+            Input the reaction time for the driver (s), the coefficient of friction (0 - 1) and the size of the intersection from stop line to opposite stop line. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
           </p>
         </div>
       </div>
@@ -314,7 +313,7 @@
         <div class="col-12 div2">
           <h2>Vehicle Length</h2>
           <p class="card-text">
-            Input the size of the vehicle, default is 4.5 metres.
+            Input the size of the vehicle, default is 4.5 metres. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
           </p>
         </div>
       </div>
