--- a/test_yourself.html
+++ b/test_yourself.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <!--Fontawesome CDN-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
-  <!--Hover.css CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
   <!--Favicon-->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!--Link to custom style sheet-->
@@ -37,17 +35,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item nav-text dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="help.html">Help</a>
-            <div class="dropdown-menu dropdown--background" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item nav-text" href="test_yourself.html">Test yourself</a>
-            </div>
+           <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
+          </li>
+           <li class="nav-item active">
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
@@ -63,9 +61,9 @@
       <div class="container div1">
       <h1>Test Yourself</h1>
       <p class="head-text">In this test you will be given one of four possible maps where you'll measure the intersection distance and be given
-       random scenario for you to calculate if a dilemma zone or option zone exists. You can refer to our <a href="help.html" target="_blank"> help</a> page at any time. Or consider using our 
+       random scenario for you to calculate if a dilemma zone or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
        <a href="index.html" target="_blank">calculator</a> for best results.</p>
-      <p class="head-text">For instructions on how to use Google Maps for this test click <a href="instructions.html" target="_blank">here</a>.</p>
+      <p class="head-text">For instructions on how to use Google Maps for this test click this button<a href="instructions.html" target="_blank" class="map-icon"> <i class="fas fa-map-marked-alt"></i></a> any time.</p>
       <p class="head-text my-0">You may need to use some external web resources too for better understanding of variables such as reaction time and coefficient of friction.</p><br>
     </div>
   </section>
@@ -140,10 +138,9 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="assets/scripts/calculator.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
-  <script src="assets/scripts/dependencies.js"></script>
+ 
 
 </body>
 
