Added unicode and mark-up for option selection and  popovers

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
           <div class="card shadow">
             <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
             <div class="card-body">
-              <h5 class="card-title">Velocity (m/s) 
+              <h5 class="card-title">Velocity (ms<sup>-1</sup>) 
               <a 
               tabindex="0" 
               class="btn btn-link" 
               role="button" 
               data-toggle="popover" 
               data-trigger="focus" 
-              title="Initial Velocity (m/s, km/h or mph)"
+              title="Initial Velocity (ms<sup>-1</sup>, kmh<sup>-1</sup> or mph)"
               data-content="Enter the initial velocity the vehicle is travelling. Don't forget to check the units!">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
@@ -117,8 +117,8 @@
               required><br>
               <label for="units">Units</label><br>
               <select name="units" id="units" style="width:60px;">
-                <option value="kmh">km/h</option>
-                <option value="ms" selected>m/s</option>
+                <option value="kmh">kmh&#x207b;&sup1;</option>
+                <option value="ms" selected>ms&#x207b;&sup1;</option>
                 <option value="mph">mph</option>
               </select>
             </div>
