Added Google Map functionality to the test yourself page

--- a/help.html
+++ b/help.html
@@ -186,7 +186,9 @@
               would be one. Again, this would not be plausible as movement would then become impossible. You can estimate μ by using real world data.
               Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For
               more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" target="_blank">
-                here</a>.</p>
+                here</a>.
+                \[μ\]</p>
+                
           </div>
         </div>
       </div>
@@ -216,9 +218,9 @@
     <!--Third Set of Cards-->
     <div class="row">
       <div class="col-12 div2">
-        <h2>Reaction Time, Friction and Intersection Size</h2>
+        <h2>Length of vehicle</h2>
         <p class="card-text">
-          Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection.
+          Length of vehicles vary depending on make, model and even type. 
         </p>
       </div>
     </div>
