--- a/test_yourself.html
+++ b/test_yourself.html
@@ -68,6 +68,38 @@
     </div>
   </section>
 
+  <section class="container">
+    <div class="row">
+      <div class="col-12 div2">
+        <h2>Open the map</h2>
+        <p class="card-text">
+         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 div3">
+        <div class="card shadow">
+          <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
+          <div class="card-body" id="card-help-map-1">
+            <h5 class="card-title">Question One</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8 div3">
+        <div class="card shadow" id="card-help-map-large-1">
+          <div class="card-body">
+            <p>Click on the map near the marker and make sure you're in satellite mode
+            and once you have established road names you can turn off labels for ease in measuring the intersection. <a href="instructions.html" target="_blank" class="map-icon"> <i class="fas fa-map-marked-alt"></i></a></p>
+            <p>Measure the intersection length heading north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
+            <div class="container" id="map_one"></div>
+            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
  <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
@@ -134,14 +166,15 @@
   </footer>
   <!-- Footer -->
 
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="assets/scripts/maps.js"></script>
+  <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="6zMt4Xa9"></script>
- 
-
+  
 </body>
 
 </html>
