Added marker and map click functionality

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -89,7 +89,7 @@
       <div class="col-lg-8 div3">
         <div class="card shadow" id="card-help-map-large-1">
           <div class="card-body">
-            <p>Click on the map near the marker and make sure you're in satellite mode
+            <p>Click on the map on or near the marker and make sure you're in satellite mode
             and once you have established road names you can turn off labels for ease in measuring the intersection. <a href="instructions.html" target="_blank" class="map-icon"> <i class="fas fa-map-marked-alt"></i></a></p>
             <p>Measure the intersection length heading north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
