Added multiple map functionality and added second map for testing purposes

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -63,8 +63,8 @@
       <p class="head-text">In this test you will be given one of four possible maps where you'll measure the intersection distance and be given
        random scenario for you to calculate if a dilemma zone or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
        <a href="index.html" target="_blank">calculator</a> for best results.</p>
-      <p class="head-text">For instructions on how to use Google Maps for this test click this button<a href="instructions.html" target="_blank" class="map-icon"> <i class="fas fa-map-marked-alt"></i></a> any time.</p>
-      <p class="head-text my-0">You may need to use some external web resources too for better understanding of variables such as reaction time and coefficient of friction.</p><br>
+      <p class="head-text">For instructions on how to measure distances across the intersection on Google Maps you can see the documentation for desktop usage at 
+      <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">Google Maps</a> for desktop or for mobile users, check the documentation at <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank">Google Maps for Mobile</a>.</p><br>
     </div>
   </section>
 
@@ -90,9 +90,39 @@
         <div class="card shadow" id="card-help-map-large-1">
           <div class="card-body">
             <p>Click on the map on or near the marker and make sure you're in satellite mode
-            and once you have established road names you can turn off labels for ease in measuring the intersection. <a href="instructions.html" target="_blank" class="map-icon"> <i class="fas fa-map-marked-alt"></i></a></p>
+            and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
             <p>Measure the intersection length heading north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
+            <button class="btn btn-primary btn-lg">Ready to answer</button>           
+          </div>
+        </div>
+      </div>
+    </div>
+
+<div class="row">
+      <div class="col-12 div2">
+        <h2>Open the map</h2>
+        <p class="card-text">
+         Use the map location provided by clicking on the map to answer questions about whether a dilemma zone exists or not.
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 div3">
+        <div class="card shadow">
+          <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
+          <div class="card-body" id="card-help-map-2">
+            <h5 class="card-title">Question Two</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8 div3">
+        <div class="card shadow" id="card-help-map-large-2">
+          <div class="card-body">
+            <p>Click on the map on or near the marker and make sure you're in satellite mode
+            and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
+            <p>Measure the intersection length heading north east on Sunnyholt Road over the M7 continuing north east on Sunnyholt Road.</p>
+            <div class="container" id="map_two"></div>
             <button class="btn btn-primary btn-lg">Ready to answer</button>           
           </div>
         </div>
